@@ -3,11 +3,13 @@
 S3method(await,BatchJobsFuture)
 S3method(completed,BatchJobsFuture)
 S3method(delete,BatchJobsFuture)
-S3method(error,BatchJobsFuture)
 S3method(expired,BatchJobsFuture)
 S3method(failed,BatchJobsFuture)
 S3method(finished,BatchJobsFuture)
 S3method(getMessage,BatchJobsFutureError)
+S3method(getOutput,BatchJobsFutureError)
+S3method(loggedError,BatchJobsFuture)
+S3method(loggedOutput,BatchJobsFuture)
 S3method(print,BatchJobsFuture)
 S3method(resolved,BatchJobsFuture)
 S3method(status,BatchJobsFuture)
@@ -18,10 +20,12 @@ export(BatchJobsFutureError)
 export(backend)
 export(batchjobs)
 export(completed)
-export(error)
 export(expired)
 export(failed)
 export(finished)
+export(getOutput)
+export(loggedError)
+export(loggedOutput)
 export(status)
 export(value)
 importFrom(BatchJobs,addRegistryPackages)
