@@ -2,6 +2,8 @@ Package: future.BatchJobs
 =========================
 
 Version: 0.9.0-9000 [2016-05-01]
+o Now the BatchJobsFutureError records the captured BatchJobs
+  output to further simplify post mortem troubleshooting.
 o Now delete() for BatchJobsFuture will not remove the BatchJobs
   registry files if the BatchJobs has status 'error' or 'expired'
   and (new) option 'future.delete' is not set to FALSE (which it
